force-app/main/default/objects/Bypass_Configuration__c/Bypass_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bypass Configuration</label>
</CustomObject>