force-app/main/default/objects/Bypass_Configuration__c/fields/Account_Process__c.field-meta.xml
<CustomField>
    <fullName>Account_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Process</label>
    <type>Checkbox</type>
</CustomField>