force-app/main/default/objects/Bypass_Configuration__c/fields/Account_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Account_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Validation Rule</label>
    <type>Checkbox</type>
</CustomField>