force-app/main/default/objects/Bypass_Configuration__c/fields/Case_Process__c.field-meta.xml
<CustomField>
    <fullName>Case_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Process</label>
    <type>Checkbox</type>
</CustomField>