force-app/main/default/objects/Bypass_Configuration__c/fields/Case_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Case_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Validation Rule</label>
    <type>Checkbox</type>
</CustomField>