force-app/main/default/objects/Bypass_Configuration__c/fields/Contact_Process__c.field-meta.xml
<CustomField>
    <fullName>Contact_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Process</label>
    <type>Checkbox</type>
</CustomField>