force-app/main/default/objects/Bypass_Configuration__c/fields/Contact_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Contact_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Validation Rule</label>
    <type>Checkbox</type>
</CustomField>