force-app/main/default/objects/Bypass_Configuration__c/fields/Email_Message_Process__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Message Process</label>
    <type>Checkbox</type>
</CustomField>