force-app/main/default/objects/Bypass_Configuration__c/fields/LDRF_ROOM_Process__c.field-meta.xml
<CustomField>
    <fullName>LDRF_ROOM_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDRF ROOM Process</label>
    <type>Checkbox</type>
</CustomField>