force-app/main/default/objects/Bypass_Configuration__c/fields/LDRF_ROOM_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>LDRF_ROOM_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDRF ROOM Validation Rule</label>
    <type>Checkbox</type>
</CustomField>