force-app/main/default/objects/Bypass_Configuration__c/fields/Lead_Process__c.field-meta.xml
<CustomField>
    <fullName>Lead_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Process</label>
    <type>Checkbox</type>
</CustomField>