force-app/main/default/objects/Bypass_Configuration__c/fields/Lead_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Lead_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Validation Rule</label>
    <type>Checkbox</type>
</CustomField>