force-app/main/default/objects/Bypass_Configuration__c/fields/Opportunity_Team_Process__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Team Process</label>
    <type>Checkbox</type>
</CustomField>