force-app/main/default/objects/Bypass_Configuration__c/fields/Opportunity_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Trigger</label>
    <type>Checkbox</type>
</CustomField>