force-app/main/default/objects/Bypass_Configuration__c/fields/Opportunity_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Validation Rule</label>
    <type>Checkbox</type>
</CustomField>