force-app/main/default/objects/Bypass_Configuration__c/fields/OpportunityLineItem_Trigger__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpportunityLineItem TriggerTrigger</label>
    <type>Checkbox</type>
</CustomField>