force-app/main/default/objects/Bypass_Configuration__c/fields/OpportunityLineItem_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpportunityLineItem Validation Rule</label>
    <type>Checkbox</type>
</CustomField>