force-app/main/default/objects/Bypass_Configuration__c/fields/Order_Process__c.field-meta.xml
<CustomField>
    <fullName>Order_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Process</label>
    <type>Checkbox</type>
</CustomField>