force-app/main/default/objects/Bypass_Configuration__c/fields/Order_Product_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Product Validation Rule</label>
    <type>Checkbox</type>
</CustomField>