force-app/main/default/objects/Bypass_Configuration__c/fields/PriceBook_Automation_Process__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Automation_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PriceBook Automation Process</label>
    <type>Checkbox</type>
</CustomField>