force-app/main/default/objects/Bypass_Configuration__c/fields/Product2_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Product2_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to inform if user changes needs to bypass Product2 triggers.</description>
    <label>Product2 Trigger</label>
    <type>Checkbox</type>
</CustomField>