force-app/main/default/objects/Bypass_Configuration__c/fields/Product_Discount_Process__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Discount Process</label>
    <type>Checkbox</type>
</CustomField>