force-app/main/default/objects/Bypass_Configuration__c/fields/Product_Discount_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Discount Validation Rule</label>
    <type>Checkbox</type>
</CustomField>