force-app/main/default/objects/Bypass_Configuration__c/fields/Quote_Line_Item_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Line Item Trigger</label>
    <type>Checkbox</type>
</CustomField>