force-app/main/default/objects/Bypass_Configuration__c/fields/Quote_Process__c.field-meta.xml
<CustomField>
    <fullName>Quote_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Process</label>
    <type>Checkbox</type>
</CustomField>