force-app/main/default/objects/Bypass_Configuration__c/fields/Quote_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Trigger</label>
    <type>Checkbox</type>
</CustomField>