force-app/main/default/objects/Bypass_Configuration__c/fields/Quote_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Validation Rule</label>
    <type>Checkbox</type>
</CustomField>