force-app/main/default/objects/Bypass_Configuration__c/fields/SPA_Form_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>SPA_Form_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Form Validation Rule</label>
    <type>Checkbox</type>
</CustomField>